--- a/scanning-QRcode-webcam/packages.config
+++ b/scanning-QRcode-webcam/packages.config
@@ -3,5 +3,7 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
