--- a/voice-asist-user-interface/packages.config
+++ b/voice-asist-user-interface/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Alturos.Yolo" version="2.6.4" targetFramework="net472" />
+  <package id="Alturos.YoloV2TinyVocData" version="1.0.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
 </packages>
